Fix visibility icon and TP comments background color

--- a/public/stylesheets/sass/talking_point.sass
+++ b/public/stylesheets/sass/talking_point.sass
@@ -2,7 +2,6 @@
  * Comprehensive Base Stylesheet - http://fvsch.com/code/base-stylesheet/
  * Makes browser default styles more consistent, creating a canvas that you
  * should modify for your project. Fully commented. Last update: 2011-10-02.
-
 /* CONTAINERS
 
 body
@@ -132,6 +131,7 @@ td:first-child, th:first-child
 	empty-cells: hide
 	/* Hide empty cells when they're the first in the row
 
+// http://colorschemedesigner.com/#1V41T9lCrw0w0
 
 $question_bg: rgb(245,230,190)
 $talking_point_bg: #c7c7c7 // #BCC3D0 //rgb(192,228,154)
@@ -150,7 +150,7 @@ $talking_points_list: #ececec
 
 $graph_green: #759564
 $graph_greenish: #cdd89d
-$graph_yellow: #f0ecc1
+$graph_yellow: #c5b19b // a38361 //657383 //f0ecc1
 $graph_reddish: #e2b68c
 $graph_red: #cf725f
 
@@ -1804,7 +1804,7 @@ div.talking_point_post_it
 		position: absolute
 		top: 0
 		right: 0
-		background: url(/images/visible2.gif) no-repeat 0 -12px
+		background: url(/images/visible3.gif) no-repeat 0 -12px
 		cursor: pointer
 	p
 		margin: 12px 10px 10px 10px
@@ -1943,7 +1943,7 @@ h4.question, p.footer
 		top: 2px
 		right: 20px
 div.talking_point_comments
-	background-color: #A7B58D
+	background-color: #D8F1AB //#A7B58D
 	position: fixed
 	div.discussion
 		position: relative
